PUG-042: Add AdminsService and its tests;